--- a/index.html
+++ b/index.html
@@ -36,47 +36,47 @@
               <h2>Thigo Adriano Sales Ramos</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Suporte Técnico</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>São Paulo-SP, Brasil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>thiagosales510@outlook.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(11)96462-5664</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-deep-purple"></i>Suporte Técnico</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-deep-purple"></i>São Paulo-SP, Brasil</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-deep-purple"></i>thiagosales510@outlook.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-deep-purple"></i>(11)96462-5664</p>
               <hr>
   
               <p class="w3-large">
-                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
+                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-deep-purple"></i>Skills</b>
               </p>
               <p>Javascript</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">60%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-deep-purple" style="width:60%">60%</div>
               </div>
               <p>Nodejs</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">60%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-deep-purple" style="width:60%">60%</div>
               </div>
               <p>MySQL</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-deep-purple" style="width:70%">70%</div>
               </div>
               <p>Python</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">35%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-deep-purple" style="width:35%">35%</div>
               </div>
               <br>
   
               <p class="w3-large w3-text-theme">
-                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b>
+                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-deep-purple"></i>Idiomas</b>
               </p>
               <p>Português</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3-deep-purple" style="height:24px;width:100%"></div>
               </div>
               <p>Inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:45%"></div>
+                <div class="w3-round-xlarge w3-deep-purple" style="height:24px;width:45%"></div>
               </div>
               <p>Espanhol</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:20%"></div>
+                <div class="w3-round-xlarge w3-deep-purple" style="height:24px;width:20%"></div>
               </div>
               <br>
             </div>
@@ -89,71 +89,79 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>TODO</p>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-deep-purple"></i>Sobre</h2>
+            <p>Recém graduado, estudo diariamente e realizo projetos para migrar do suporte técnico para a área de desenvolvimento de softwares.
+              Possuo grande vontade de aprender novos conceitos e não paro até domina-los.
+            </p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
+              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-deep-purple"></i>Experiências
             </h2>
-            <div class="w3-container">
+            <!-- <div class="w3-container">
               <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-deep-purple"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-deep-purple w3-round">Atual</span></h6>
               <p>TODO</p>
-              <hr>
+              <hr> -->
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Estágio suporte técnico - RPX Capital</b></h5>
+              <h6 class="w3-text-deep-purple"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Ago 2021 -  Dez 2022</h6>
+              <p>Estágio de suporte técnico onde realizava serviços de help desk para os colaboradores,
+                 apoiava e dava suporte na infraestutura de rede e dos equipamentos de informatica da empresa</p>
             </div>
           </div>
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
+              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-deep-purple"></i>Educação
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-deep-purple"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-deep-purple w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="https://www.dio.me/certificate/5BFD04D9" target="_blank">Curso: Construindo uma Pokédex com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/97215BB9" target="_blank">Curso: Dominando o Protocolo HTTP e Integrando com a PokeAPI</a></li>
+                <li><a href="https://www.dio.me/certificate/8911E707" target="_blank">Curso: Introdução ao Git e ao GitHub</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Graduação em Sistemas da Informação - UNIP</b></h5>
+              <h6 class="w3-text-deep-purple"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2019 - 2022</h6>
+              <p>Graduação finalizada em sistemas de informação pela Universidade Paulista</p>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Curso Técnico de Indformática - ETEC Albert Einstein</b></h5>
+              <h6 class="w3-text-deep-purple"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2016 - 2017</h6>
+              <p>Curso técnico integrado ao ensino médio oferecido pela ETEC, onde me interessei pela área de TI</p>
             </div>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
+              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-deep-purple"></i>Projetos
             </h2>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-deep-purple">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/Tthiago88/TCC_Reconhecimento" target="_blank">Projeto TCC</a>
               </h6>
-              <p>TODO</p>
+              <p>Trabalho de conclusão de curso entrege para a obtenção da graduação de sistemas da informação</p>
               <hr>
             </div>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
-                <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
+              <h6 class="w3-text-deep-purple">
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/Tthiago88/Pokedex_desafio" target="_blank">Pokedex API</a>
               </h6>
-              <p>TODO</p>
+              <p>Desafio da DIO para a criação de uma pokedex alimentada pela pokeAPI </p>
             </div>
           </div>
   
@@ -166,13 +174,10 @@
       <!-- End Page Container -->
     </div>
   
-    <footer class="w3-container w3-teal w3-center w3-margin-top">
+    <footer class="w3-container w3-deep-purple w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="LINK_GITHUB" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://github.com/Tthiago88" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="LINK_LINKEDIN" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-      <a href="LINK_FACEBOOK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-      <a href="LINK_INSTAGRAM" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-      <a href="LINK_TWITTER" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
